# teknofest_hareketli_uydu_terminali

./: .ruff.toml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.json  docker-compose.yml  final_test_report.txt  kin_test_output.txt  main.py  pyproject.toml  requirements.txt  run.bat  setup.py  stab_test_output.txt  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml  verify.yml
analysis/ai_models/: vibration_analyzer.py
analysis/calculators/: antenna_pointing.py  kalman_tuner.py  link_budget.py  parachute_sizing.py  pid_optimizer.py
analysis/dashboards/: web_dashboard.py
analysis/simulations/: descent_profile.py  ew_jammer.py  performance_stats.py  report_generator.py  terrain_generator.py  tracking_sim.py  udp_listener.py  viz_3d.py
docs/: CYBER_SECURITY.md  HARDWARE.md  INSTALLATION.md  MATHEMATICS.md  PREDICTIVE_MAINTENANCE.md
scripts/: deploy_edge.sh  generate_cpp_core.py
src/: ground_station.py  gui_app.py  hardware_interface.py  kinematics.py  replay_system.py  sensor_fusion.py  serial_interface.py  simulated_hardware.py  stabilization.py  telemetry.py
tests/: test_kinematics.py  test_sensor_fusion.py  test_stabilization.py
